--- a/easypan/src/main/resources/application.properties
+++ b/easypan/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.servlet.context-path=/api
 server.servlet.session.timeout=PT60M
 #\u5904\u7406favicon
 spring.mvc.favicon.enable=false
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
 #\u5F02\u5E38\u5904\u7406
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
